# Animal_welfare

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  main.py  pyproject.toml  render.yaml  requirements.txt
backend/aggregator/: daily_summary.py  spike_detector.py  tfidf_keywords.py
backend/api/routes/: articles.py  entities.py  keywords.py  metrics.py  narrative.py  sentiment.py  sources.py  spikes.py  topics.py
backend/config/: keywords.py  settings.py
backend/db/: database.py  models.py
backend/db/migrations/: fix_sequences.sql  init.sql  supabase_rpc_functions.sql
backend/ingestion/: deduplicator.py  newsapi_fetcher.py  normalizer.py  relevance_gate.py  rss_fetcher.py  scheduler.py  scraper.py
backend/nlp/: hf_api.py  keybert_extractor.py  misinfo_detector.py  pipeline.py  sentiment.py  spacy_processor.py  topic_classifier.py
backend/scripts/: check_false_pos.py  migrate_to_supabase.py
backend/tests/: verify_module1.py  verify_module2.py  verify_module3.py  verify_module4.py  verify_module5.py  verify_module6.py  verify_module7.py
docs/: architecture.md  data-flow.md  documentation.md  feature-list.md  future-scope.md  module-requirements.md  module-specifications.md  setup.md  thinking-process.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx
frontend/src/components/panels/: LatestArticles.jsx  MisinfoAlerts.jsx  NarrativeShift.jsx  TopEntities.jsx  (+5 more)
frontend/src/hooks/: api.js  useApiData.js
(+3 files in other folders)
