[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.1",
    "feedparser>=6.0.12",
    "keybert>=0.9.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.48",
    "torch>=2.10.0",
    "trafilatura>=2.0.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
