[project]
name = "backend"
version = "0.1.0"
description = "Animal welfare news sentiment tracker — ingestion, NLP, and REST API"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.1",
    "feedparser>=6.0.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "spacy>=3.8.11",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "supabase>=2.28.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.41.0",
    "yake>=0.4.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
